--- a/html/event/css/event04.css
+++ b/html/event/css/event04.css
@@ -55,7 +55,7 @@
 .eventWrap .event01 .infoBox.list02 ul li { width: 100%; } 
 .eventWrap .event01 .infoBox.list02 ul a { display: block; height: 100%; padding: 40px 10px 18px 24px; position: relative; border: 2px solid #20bae2; border-radius: 20px; box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.03); box-sizing: border-box; } 
 .eventWrap .event01 .infoBox.list02 ul .listTit { width: 142px; position: absolute; top: -18px; left: 50%; transform: translateX(-50%); background: #20bae2; border-radius: 50px; } 
-.eventWrap .event01 .infoBox.list02 ul .listTit::after { content: ''; position: absolute; bottom: -14px; left: 50%; transform: translateX(-50%); border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 14px solid #20bae2; } 
+.eventWrap .event01 .infoBox.list02 ul .listTit::after { content: ''; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%); border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 14px solid #20bae2; } 
 .eventWrap .event01 .infoBox.list02 ul .listTit p { display: flex; height: 36px; color: #fff; font-size: 14px; align-items: center; justify-content: center; } 
 .eventWrap .event01 .infoBox.list02 ul .listTxt p { padding-left: 48px; position: relative; color: #000; font-size: 18px; letter-spacing: -1px; } 
 .eventWrap .event01 .infoBox.list02 ul li .listTxt p::before { content: ''; width: 38px; height: 70px; position: absolute; left: 0; bottom: 0; } 
@@ -215,7 +215,7 @@
 .eventWrap .event03 .infoWrap::before { background-position: bottom 10px right 10px; background-size: 70px; } 
 .eventWrap .event03 .infoWrap ul { padding-left: 0; } 
 .eventWrap .evFooter li br { display: none; } 
-}
+ }
 
 @media all and (max-width: 640px){
  .eventWrap .eventMain .innerSection { padding-top: 30px; } 
@@ -290,35 +290,13 @@
 .eventWrap .evFooter li { padding-left: 10px; font-size: 12px; } 
 .eventWrap .event03 .itemBox + .itemBox { margin-top: 20px; } 
 
-.eventWrap .ev_pop .lottery_present img {
-    margin-left: 30px;
-    margin-bottom: 15px;
-    max-width: 120px;
-}
-.eventWrap .ev_pop .lottery_present .gift_end1 strong {
-    font-size: 18px;
-}
-.eventWrap .ev_pop .lottery_present .gift_end2 {
-    font-size: 14px;
-}
-.eventWrap .btn_wrap {
-    margin-top: 20px;
-}
-.eventWrap .ev_pop .btn_wrap a {
-    font-size: 14px;
-}
-.eventWrap .ev_pop .popup_inner {
-    padding: 20px 10px;
-}
-.eventWrap .ev_pop .lottery_present .gift_end2 span.losing {
-    font-size: 14px;
-}
-.eventWrap .ev_pop .lottery_present .gift_end1 {
-    margin-bottom: 6px;
-}
-.eventWrap .ev_pop .txt {
-    font-size: 15px;
-    word-break: keep-all;
-}
-
+.eventWrap .ev_pop .lottery_present img { margin-left: 30px; margin-bottom: 15px; max-width: 120px; } 
+.eventWrap .ev_pop .lottery_present .gift_end1 strong { font-size: 18px; } 
+.eventWrap .ev_pop .lottery_present .gift_end2 { font-size: 14px; } 
+.eventWrap .btn_wrap { margin-top: 20px; } 
+.eventWrap .ev_pop .btn_wrap a { font-size: 14px; } 
+.eventWrap .ev_pop .popup_inner { padding: 20px 10px; } 
+.eventWrap .ev_pop .lottery_present .gift_end2 span.losing { font-size: 14px; } 
+.eventWrap .ev_pop .lottery_present .gift_end1 { margin-bottom: 6px; } 
+.eventWrap .ev_pop .txt { font-size: 15px; word-break: keep-all; } 
 }
