--- a/html/event/css/event04.css
+++ b/html/event/css/event04.css
@@ -95,15 +95,19 @@
 
 .eventWrap .event03 { background: url(../images/eventImg/event04/ev03_bg.jpg) top center #F6DCC4 no-repeat; } 
 .eventWrap .event03 .innerSection { padding: 160px 0 100px; } 
-.eventWrap .event03 .itemBox { display: flex; padding: 50px 50px 10px 42px; background-position: left bottom 50px !important; box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1); align-items: flex-start; } 
+.eventWrap .event03 .itemBox { display: flex; padding: 30px 50px 30px 42px; background-position: left bottom 50px !important; box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1); align-items: center; } 
+.eventWrap .event03 .itemBox.box01,
+.eventWrap .event03 .itemBox.box02 { padding: 0; } 
+.eventWrap .event03 .itemBox > a { display: flex; width: 100%; padding: 30px 50px 30px 42px; background-position: left bottom 50px !important; align-items: center; } 
+
 .eventWrap .event03 .itemBox.box01 { background: url(../images/eventImg/event04/ev03_item_bg01.png) #fff no-repeat; } 
 .eventWrap .event03 .itemBox.box02 { background: url(../images/eventImg/event04/ev03_item_bg02.png) #fff no-repeat; } 
 .eventWrap .event03 .itemBox.box03 { background: url(../images/eventImg/event04/ev03_item_bg03.png) #fff no-repeat; } 
-.eventWrap .event03 .itemBox + .itemBox { margin-top: 56px; } 
+.eventWrap .event03 .itemBox + .itemBox { margin-top: 40px; } 
 .eventWrap .event03 .itemBox .titWrap { width: 260px; margin-right: 20px; flex-shrink: 0; } 
-.eventWrap .event03 .itemBox.box01 .titWrap { height: 230px; margin-bottom: 30px; background: url(../images/eventImg/event04/ev03_item01.png) center bottom no-repeat; } 
-.eventWrap .event03 .itemBox.box02 .titWrap { height: 236px; margin-bottom: 20px; background: url(../images/eventImg/event04/ev03_item02.png) center bottom no-repeat; } 
-.eventWrap .event03 .itemBox.box03 .titWrap { height: 320px; margin-bottom: 30px; background: url(../images/eventImg/event04/ev03_item03.png) center bottom no-repeat; } 
+.eventWrap .event03 .itemBox.box01 .titWrap { height: 230px; background: url(../images/eventImg/event04/ev03_item01.png) center bottom no-repeat; } 
+.eventWrap .event03 .itemBox.box02 .titWrap { height: 236px; background: url(../images/eventImg/event04/ev03_item02.png) center bottom no-repeat; } 
+.eventWrap .event03 .itemBox.box03 .titWrap { height: 320px; background: url(../images/eventImg/event04/ev03_item03.png) center bottom no-repeat; } 
 .eventWrap .event03 .itemBox .titWrap p { display: flex; width: 145px; height: 34px; margin: 0 auto; padding-top: 4px; background: #000000; color: #fff; font-size: 18px; align-items: center; justify-content: center; } 
 .eventWrap .event03 .itemBox .txtWrap .txt { margin-bottom: 20px; color: #868686; font-size: 22px; letter-spacing: -1px; } 
 .eventWrap .event03 .itemBox .txtWrap .txt strong { display: block; margin-bottom: 10px; color: #687aff; font-size: 40px; line-height: 1; } 
@@ -116,9 +120,13 @@
 .eventWrap .event03 .itemBox .infoList p em span { color: #ff0000; font-size: 16px; } 
 .eventWrap .event03 .itemBox .txtWrap { position: relative; width: 100%; } 
 .eventWrap .event03 .itemBox .btnList { position: absolute; right: 0; bottom: 0; } 
-.eventWrap .event03 .itemBox .btnList a { display: inline-block; padding: 10px 18px 2px 10px; position: relative; color: #7078ff; font-size: 20px; text-align: center; } 
+.eventWrap .event03 .itemBox .btnList a { display: inline-block; padding: 10px 18px 2px 10px; position: relative; color: #7078ff; font-size: 30px; text-align: center; white-space: nowrap;} 
 .eventWrap .event03 .itemBox .btnList a::before { content: ''; width: 100%; height: 14px; position: absolute; bottom: 0; right: 0; background: url(../images/eventImg/event04/btn_img.png) bottom right no-repeat; } 
-.eventWrap .event03 .itemBox.box03 .btnList { display: flex; margin-top: 30px; position: static; justify-content: space-between; gap: 0 5px; } 
+.eventWrap .event03 .itemBox.box03 .btnList { display: flex; flex-wrap: wrap; margin-top: 30px; position: static;gap: 10px 0; } 
+.eventWrap .event03 .itemBox.box03 .btnList li { width: calc(100% / 2);} 
+.eventWrap .event03 .itemBox .btnLink { position: absolute; right: 0; bottom: -10px; } 
+.eventWrap .event03 .itemBox .btnLink p { display: inline-block; padding: 10px 18px 2px 10px; position: relative; color: #7078ff; font-size: 30px; text-align: center; } 
+.eventWrap .event03 .itemBox .btnLink p::before { content: ''; width: 100%; height: 14px; position: absolute; bottom: 0; right: 0; background: url(../images/eventImg/event04/btn_img.png) bottom right no-repeat; } 
 
 .eventWrap .event03 .infoWrap { margin-top: 110px; padding: 40px 10px; position: relative; background: #fff840; border-radius: 30px; box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1); } 
 .eventWrap .event03 .infoWrap::before { content: ''; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: calc(100% - 10px); height: calc(100% - 10px); background: url(../images/eventImg/event04/ev03_list01.png) left 28px top 40px #fff no-repeat; border: 2px dashed #000; border-radius: 30px; box-sizing: border-box; z-index: 1; } 
@@ -203,13 +211,15 @@
 .eventWrap .event02 { background-position: top -60px center; } 
 .eventWrap #gameContainer { margin-top: 100px; zoom: 0.7; } 
 
+.eventWrap .event03 .itemBox.itemBox.box01 > a,
+.eventWrap .event03 .itemBox.itemBox.box02 > a { display: block; padding: 50px 20px; background: #fff !important; } 
+.eventWrap .event03 .itemBox .btnLink { margin-top: 20px; position: static; text-align: center; } 
 .eventWrap .event03 .itemBox { display: block; padding: 50px 20px; background: #fff !important; } 
 .eventWrap .event03 .itemBox .titWrap { width: 100%; height: 250px; margin-right: 0; margin-bottom: 20px; } 
 .eventWrap .event03 .itemBox .txtWrap .txt strong { font-size: 36px; } 
 .eventWrap .event03 .itemBox .txtWrap .txt { font-size: 20px; text-align: center; word-break: keep-all; } 
-.eventWrap .event03 .itemBox .btnList { position: static; text-align: center; margin-top: 30px; } 
-.eventWrap .event03 .itemBox.box03 .btnList { flex-wrap: wrap; gap: 20px 0; } 
-.eventWrap .event03 .itemBox.box03 .btnList li { width: calc(100% / 2); } 
+.eventWrap .event03 .itemBox .btnList { max-width: 560px; position: static; margin: 30px auto 0; text-align: center; } 
+
 .eventWrap .event03 .itemBox .infoList li { display: block; text-align: center; } 
 .eventWrap .event03 .itemBox .infoList strong { margin-right: 0; margin-bottom: 10px; } 
 .eventWrap .event03 .infoWrap { padding: 50px 20px; } 
@@ -277,12 +287,13 @@
 .eventWrap .event03 .itemBox .infoList p em { font-size: 12px; } 
 .eventWrap .event03 .itemBox .infoList p em span { font-size: 12px; } 
 .eventWrap .event03 .itemBox .btnList { margin-top: 10px; } 
-.eventWrap .event03 .itemBox.box03 .btnList { margin-top: 10px; } 
 .eventWrap .event03 .itemBox .btnList li { width: 100%; } 
 .eventWrap .event03 .itemBox .btnList li a { padding: 6px 12px 2px 6px; font-size: 14px; } 
 .eventWrap .event03 .itemBox .btnList a::before { height: 10px; } 
 .eventWrap .event03 .infoWrap { margin-top: 30px; padding: 20px 12px 60px; border-radius: 20px; } 
 .eventWrap .event03 .infoWrap::before { width: calc(100% - 4px); height: calc(100% - 4px); border: 1px dashed #000; border-radius: 20px; background-size: 40px; background-position: bottom center; } 
+.eventWrap .event03 .itemBox .btnLink p { padding: 6px 12px 2px 6px; font-size: 14px; } 
+.eventWrap .event03 .itemBox.itemBox.box01 > a, .eventWrap .event03 .itemBox.itemBox.box02 > a { display: block; padding: 20px 10px; border-radius: 10px; } 
 
 .eventWrap .event03 .infoWrap ul li::before { width: 12px; height: 12px; background-size: contain; } 
 .eventWrap .event03 .infoWrap p { font-size: 14px; word-break: keep-all; } 
